add create modal wout style

--- a/Frontend/ContactList.WebApp/src/index.html
+++ b/Frontend/ContactList.WebApp/src/index.html
@@ -13,7 +13,7 @@
   <nav class="navbar navbar-light bg-light static-top">
     <div class="container">
       <a class="navbar-brand" href="#!">ContactListWebApp</a>
-      <a class="btn btn-primary" href="#signup">Add contact</a>
+      <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">Add contact</button>
     </div>
   </nav>
   <div class="container">
