--- a/Frontend/ContactList.WebApp/src/index.html
+++ b/Frontend/ContactList.WebApp/src/index.html
@@ -9,14 +9,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"  integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-  <!-- Navigation-->
-  <nav class="navbar navbar-light bg-light static-top">
-    <div class="container">
-      <a class="navbar-brand" href="#!">ContactListWebApp</a>
-      <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalCreateContact">Add contact</button>
-    </div>
-  </nav>
-  <div class="container">
+  <div class="container-fluid">
     <app-root></app-root>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
